--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -82,8 +82,8 @@
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
                                 <h1 class="display-3 text-white animated slideInDown">Build coding skills online</h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Data drives everything.Get the skills you need for the future of work.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                                <a href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             </div>
                         </div>
                     </div>
