--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                         </div>
                       
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit">Read More</a>
                 </div>
             </div>
         </div>
