--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
                                 <h1 class="display-3 text-white animated slideInDown">Learn how to code and build skills in <span>programming</span></h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Because learning to code might be the easiest way to change your career.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                                <a href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="https://docs.google.com/forms/d/1pvzYzkMElslNWQog-yEXf4ZkogkRrRkwfz-U1OK2H8g/edit" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             </div>
                         </div>
                     </div>
